--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "primeicons/primeicons.css";
+
+.p-dialog .p-dialog-content {
+    padding: 2rem 1.5rem 2rem 1.5rem;
+}
+
+.field {
+    margin-top: 1rem;
+}
+
+.button-add {
+    margin-bottom: 1rem;
+}
